fixed cart not displaying on mobile

--- a/style.css
+++ b/style.css
@@ -325,6 +325,37 @@ nav {
     .nav__user img {
         width: 30px;
     }
+
+    /* CART */
+    .nav__cart--container {
+        top: -300px;
+        width: 100%;
+        height: 200px;
+        padding: 1rem;
+        background-color: var(--white);
+        display: flex;
+        flex-direction: column;
+
+        box-shadow: 5px 10px 18px #888888;
+
+        
+        animation: none;
+    }
+
+    .nav__cart--container.active-cart {
+        z-index: 999;
+        top: 100%;
+        animation: cart-open 500ms ease;
+    }
+
+    @keyframes cart-open {
+        from {
+            transform: translateY(-100%);
+        }
+        to {
+            transform: translateY(0%);
+        }
+    }
 }
 
 /* MAIN */
@@ -616,8 +647,6 @@ main {
         opacity: 1;
     }
 }
-
-
 
 .modal-images.modal-active {
     display: block;
